--- a/_config.yaml
+++ b/_config.yaml
@@ -2,4 +2,4 @@ title: Data Science Portfolio
 logo: assets/logo.png
 description: Data Queen // Senior Analyst // Degree Apprentice
 show_downloads: false
-theme: jekyll-theme-midnight
+theme: jekyll-remote-theme
