--- a/_config.yaml
+++ b/_config.yaml
@@ -46,10 +46,7 @@ minima:
   # solarized	         Adaptive skin for solarized color scheme skins.
   skin: auto
   
-  # Minima date format.
-  # The default value is "%b %d, %Y" (e.g. Nov 14, 2023) 
-  # Refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this.
-  #date_format: "%b-%d-%Y"
+  date_format: "%d-%b-%Y"
 
   # Generate social links in footer.
   #social_links:
