--- a/_config.yaml
+++ b/_config.yaml
@@ -2,4 +2,4 @@ title: Data Science Portfolio
 logo: assets/logo.png
 show_downloads: true
 description: Data Queen // Senior Analyst // Degree Apprentice
-theme: minima
+theme: modernist
