--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 title: Data Science Portfolio
-logo:
+logo: /images/logo.png
 description: Data Queen // Senior Analyst // Degree Apprentice
 show_downloads: true
 theme: jekyll-theme-minimal
