--- a/_config.yaml
+++ b/_config.yaml
@@ -3,3 +3,6 @@ logo: /images/logo.png
 description: Data Queen // Senior Analyst // Degree Apprentice
 show_downloads: True
 theme: jekyll-theme-minimal
+# Add this line:
+plugins:
+  - jekyll-include-cache
