--- a/_config.yaml
+++ b/_config.yaml
@@ -3,3 +3,10 @@ logo: /images/logo.png
 description: Data Queen // Senior Analyst
 show_downloads: True
 theme: jekyll-theme-minimal
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: default
+sass:
+  style: compressed
