--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 title: Data Science Portfolio
-logo: /images/logo.png
+logo: assets/images/logo.png
 description: Data Queen // Senior Analyst
 show_downloads: True
 theme: jekyll-theme-minimal
