--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 title: Data Science Portfolio
 logo: assets/images/logo.png
 description: Data Queen // Senior Analyst
-show_downloads: True
+show_downloads: False
 theme: jekyll-theme-merlot
