--- a/_config.yaml
+++ b/_config.yaml
@@ -2,4 +2,4 @@ title: Data Science Portfolio
 logo: assets/images/logo.png
 description: Data Queen // Senior Analyst
 show_downloads: False
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-slate
