--- a/_config.yaml
+++ b/_config.yaml
@@ -2,5 +2,5 @@ title: Data Science Portfolio
 logo: assets/logo.png
 description: Data Queen // Senior Analyst
 show_downloads: True
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 baseurl: "/Vegetable_TimeSeries"
