--- a/_config.yaml
+++ b/_config.yaml
@@ -4,3 +4,19 @@ description: Data Queen // Senior Analyst
 show_downloads: True
 theme: jekyll-theme-minimal
 baseurl: "/Vegetable_TimeSeries"
+plugins:
+  - jekyll-relative-links
+relative_links:
+  enabled: true
+  collections: true
+include:
+  - Introduction.md
+  - Project-Background.md
+  - Project-Summary.md
+  - Data-Preparation.md
+  - Analysis.md
+  - Dashboard.md
+  - Business-Impact.md
+  - Conclusion.md
+  - References.md
+  
