--- a/_config.yaml
+++ b/_config.yaml
@@ -4,20 +4,22 @@ description: Data Queen // Senior Analyst
 show_downloads: True
 
 baseurl: "/Vegetable_TimeSeries"
+theme: jekyll-theme-minimal
+
 plugins:
   - jekyll-relative-links
 relative_links:
   enabled: true
   collections: true
-include:
-  - Introduction.md
-  - Project-Background.md
-  - Project-Summary.md
-  - Data-Preparation.md
-  - Analysis.md
-  - Dashboard.md
-  - Business-Impact.md
-  - Conclusion.md
-  - References.md
 
-  theme: jekyll-theme-minimal
+# Optional: These files will be included by default, no need to list them here
+# include:
+#   - Introduction.md
+#   - Project-Background.md
+#   - Project-Summary.md
+#   - Data-Preparation.md
+#   - Analysis.md
+#   - Dashboard.md
+#   - Business-Impact.md
+#   - Conclusion.md
+#   - References.md
