--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 docs:
   - title: Introduction
-    url: /Introduction.html
+    children:
+      - title: Introduction
+      - url: /Introduction.html
   - title: Project Summary
     url: /Project-Summary.html 
