--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,6 @@ docs:
   - title: Introduction
     children:
       - title: Introduction
-      - url: /Introduction.html
-  - title: Project Summary
-    url: /Project-Summary.html 
+      - url: /Introduction
+    - title: "Project Summary"
+      url: /Project-Summary 
