--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,29 @@
-docs:
-  - title: Introduction
-    children:
-      - title: Introduction
-      - url: /Introduction
-    - title: "Project Summary"
-      url: /Project-Summary 
+- title: Home
+  url: /
+
+- title: Introduction
+  url: /Introduction
+
+- title: Project Background
+  url: /Project-Background
+
+- title: Project Summary
+  url: /Project-Summary
+
+- title: Data Preparation
+  url: /Data-Preparation
+
+- title: Analysis
+  url: /Analysis
+
+- title: Dashboard
+  url: /Dashboard
+
+- title: Business Impact
+  url: /Business-Impact
+
+- title: Conclusion
+  url: /Conclusion
+
+- title: References
+  url: /References
