--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,29 +1,30 @@
-- title: Home
-  url: /
+docs:
+  - title: Home
+    url: /
 
-- title: Introduction
-  url: /Introduction
+  - title: Introduction
+    url: /Introduction
 
-- title: Project Background
-  url: /Project-Background
+  - title: Project Background
+    url: /Project-Background
 
-- title: Project Summary
-  url: /Project-Summary
+  - title: Project Summary
+    url: /Project-Summary
 
-- title: Data Preparation
-  url: /Data-Preparation
+  - title: Data Preparation
+    url: /Data-Preparation
 
-- title: Analysis
-  url: /Analysis
+  - title: Analysis
+    url: /Analysis
 
-- title: Dashboard
-  url: /Dashboard
+  - title: Dashboard
+    url: /Dashboard
 
-- title: Business Impact
-  url: /Business-Impact
+  - title: Business Impact
+    url: /Business-Impact
 
-- title: Conclusion
-  url: /Conclusion
+  - title: Conclusion
+    url: /Conclusion
 
-- title: References
-  url: /References
+  - title: References
+    url: /References
