--- a/_config.yaml
+++ b/_config.yaml
@@ -1,4 +1,4 @@
-title: Data Science Portfolio
+title: Tommies vs Tatties
 logo: assets/logo.png
 description: Data Queen // Senior Analyst
 show_downloads: true
